# LeaseLens-AI

./: LICENSE  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
backend/app/: db.py  main.py
backend/app/core/: config.py
backend/tests/: test_main.py
